# JHEWProject

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Quick Sync + PR.lnk  README.md  Start Work - Pull.lnk  init-dev.ps1  settings.ini
.devtools/: quick-sync-pr.ps1  start-work-pull.ps1
.github/workflows/: discord-notify.yml
scripts/: get_imgui.ps1
src/: DxApp.cpp  DxApp.h  Settings.cpp  Settings.h  Shader.hlsl  WinMain.cpp
